--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ header {
 
 main {
     display: inline-block;
-    margin: 300px 100px 200px 0;
     width: calc(100vw - 500px);
     height: calc(100vh - 200px);
     margin: 0px;
@@ -27,7 +26,7 @@ main {
     background-color: green;
 }
 
-right {
+div {
     display: inline;
     float: right;
     width: 200px;
@@ -38,7 +37,7 @@ right {
     background-color: yellow;
 }
 
-left {
+nav {
     display: inline;
     float: left;
     width: 300px;
